--- a/Udacity Dashboard/templates/home.html
+++ b/Udacity Dashboard/templates/home.html
@@ -12,28 +12,28 @@
       height: 100%;
     }
     </style>
-    <title>Hello, world!</title>
+    <title>Where to park?</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Where to Park?</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Donate</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  <div>
-    <div class="border border-primary" id="chart-div" style="width:100%;height:100%;"></div>
-  </div>
+      <a class="navbar-brand" href="#">Where to Park?</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Donate</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <div id="chart-div" style="width:100%;height:90%;"></div>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -41,9 +41,12 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="static/plotly-latest.min.js"></script>
     <script>
-      // Plotly.plot('graph-div', fig.data, fig.layout)
-      // Can't get plotly to work!!!!
       var fig = {{ fig | safe }}
+
+      Plotly.setPlotConfig({
+        mapboxAccessToken: fig.token
+      })
+
       chart_div = document.getElementById('chart-div');
 	    Plotly.plot(chart_div, fig.data, fig.layout);
     </script>
